Fix overflow issue in display box

--- a/client/src/components/Page/Page.styl
+++ b/client/src/components/Page/Page.styl
@@ -12,6 +12,7 @@
       padding: 65px 40px;
       font-size: 1.2em;
       font-weight: 300;
+      overflow: auto;
     }
   }
 }
